# PZ_ARISA_MLOps_Final

./: .gitignore  01-Before_MLOps.ipynb  02-Model_version.ipynb  02-Model_version_MLFlow.ipynb  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  predict.yml  predict_on_model_change.yml  preproc-train.yml  retrain_on_change.yml
ARISA_DSML/: config.py  helpers.py  predict.py  preproc.py  resolve.py  train.py
mlruns/0/: meta.yaml
mlruns/162574513289360301/: meta.yaml
mlruns/162574513289360301/0364b4652c32473bb8cc75ad52285ff1/: meta.yaml
mlruns/162574513289360301/055350a1146c4459a0db1d0bd59639d7/: meta.yaml
mlruns/162574513289360301/23adef5c53994e4593a861466a53ee3e/: meta.yaml
mlruns/162574513289360301/376f8357d3f54c0f9c12a04dad88b55b/: meta.yaml
mlruns/162574513289360301/3d27fe52f08247989812ae5897690d27/: meta.yaml
mlruns/162574513289360301/426c2ad7b0ea4f8ea5f2a6dec0f64179/: meta.yaml
mlruns/162574513289360301/46610d824f614ee28b23e5fff2e48c92/: meta.yaml
mlruns/162574513289360301/4956690a34ed4e9ea29fab145b015ef8/: meta.yaml
mlruns/162574513289360301/4e1e9bcdf9d6404386c76bee2bc56f07/: meta.yaml
mlruns/485963176087146480/: meta.yaml
mlruns/491534423288906432/: meta.yaml
mlruns/992558152596629916/: meta.yaml
models/: best_params.pkl  catboost_model.cbm  cv_results.csv  model_params.pkl  preds.csv
results/: best_params.pkl  catboost_model_HeartDisease.cbm  catboost_model_HeartDisease_v2.cbm  cv_results.csv  model_params.pkl
(+213 files in other folders)
