[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ARISA_DSML"
version = "0.0.1"
description = "Prediction of heart disease"
authors = [
    { name = "Pawel_Zmudzki" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "catboost",
    "matplotlib",
    "plotly",
    "optuna",
    "ipywidgets",
    "kaleido",
    "shap",
    "jupyterlab-rise",
    "joblib",
    "loguru",
    "nannyml",
    "kaggle",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8", 
    "pytest",
    "jupyter",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E731", "E266", "E501", "C901", "N803", "FBT001", "FBT002", "N806", "E231", "E225", "E227", "W391", "E252", "E226"]

[tool.ruff.lint.isort]
known-first-party = ["ARISA_DSML"]
force-sort-within-sections = true